// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarList renders with collapsed avatar count if > 5 users 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  tooltipOptions={
    Object {
      "position": "top",
    }
  }
  typeMembers="users"
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "3",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "4",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "5",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "6",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <AvatarListWrapper>
    <div
      className="css-1kbnx78-AvatarListWrapper e1mtf41h0"
    >
      <Tooltip
        containerDisplayMode="inline-block"
        position="top"
        title="1 other users"
      >
        <Manager>
          <Reference>
            <InnerReference
              setReferenceNode={[Function]}
            >
              <Container
                aria-describedby="tooltip-123456"
                containerDisplayMode="inline-block"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  aria-describedby="tooltip-123456"
                  className="css-1y4rfpo-Container eowlwvy0"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <CollapsedUsers
                    size={28}
                  >
                    <div
                      className="css-1xikpge-CollapsedUsers-Circle e1mtf41h2"
                      size={28}
                    >
                      <Plus>
                        <span
                          className="css-jn99p5-Plus e1mtf41h3"
                        >
                          +
                        </span>
                      </Plus>
                      1
                    </div>
                  </CollapsedUsers>
                </span>
              </Container>
            </InnerReference>
          </Reference>
        </Manager>
      </Tooltip>
      <StyledAvatar
        gravatar={false}
        hasTooltip={true}
        key="1-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "1",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <UserAvatar
          className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
          gravatar={false}
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <BaseAvatar
            className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
            gravatarId="foo@example.com"
            hasTooltip={true}
            letterId="foo@example.com"
            round={true}
            size={28}
            style={Object {}}
            title="Foo Bar"
            tooltip="Foo Bar (foo@example.com)"
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            type="letter_avatar"
            uploadId=""
            uploadPath="avatar"
          >
            <Tooltip
              containerDisplayMode="inline-block"
              disabled={false}
              position="top"
              title="Foo Bar (foo@example.com)"
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <Container
                      aria-describedby="tooltip-123456"
                      containerDisplayMode="inline-block"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        aria-describedby="tooltip-123456"
                        className="css-1y4rfpo-Container eowlwvy0"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <StyledBaseAvatar
                          className="avatar css-31pfpo-StyledAvatar-Circle e1mtf41h1"
                          gravatarId="foo@example.com"
                          letterId="foo@example.com"
                          loaded={true}
                          round={true}
                          style={
                            Object {
                              "height": "28px",
                              "width": "28px",
                            }
                          }
                          title="Foo Bar"
                          type="letter_avatar"
                          uploadId=""
                          uploadPath="avatar"
                        >
                          <span
                            className="avatar e1mtf41h1 css-11cenzn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                            title="Foo Bar"
                            type="letter_avatar"
                          >
                            <ForwardRef
                              displayName="Foo Bar"
                              identifier="foo@example.com"
                              round={true}
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                forwardedRef={null}
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  forwardedRef={null}
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </ForwardRef>
                          </span>
                        </StyledBaseAvatar>
                      </span>
                    </Container>
                  </InnerReference>
                </Reference>
              </Manager>
            </Tooltip>
          </BaseAvatar>
        </UserAvatar>
      </StyledAvatar>
      <StyledAvatar
        gravatar={false}
        hasTooltip={true}
        key="2-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "2",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <UserAvatar
          className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
          gravatar={false}
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <BaseAvatar
            className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
            gravatarId="foo@example.com"
            hasTooltip={true}
            letterId="foo@example.com"
            round={true}
            size={28}
            style={Object {}}
            title="Foo Bar"
            tooltip="Foo Bar (foo@example.com)"
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            type="letter_avatar"
            uploadId=""
            uploadPath="avatar"
          >
            <Tooltip
              containerDisplayMode="inline-block"
              disabled={false}
              position="top"
              title="Foo Bar (foo@example.com)"
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <Container
                      aria-describedby="tooltip-123456"
                      containerDisplayMode="inline-block"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        aria-describedby="tooltip-123456"
                        className="css-1y4rfpo-Container eowlwvy0"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <StyledBaseAvatar
                          className="avatar css-31pfpo-StyledAvatar-Circle e1mtf41h1"
                          gravatarId="foo@example.com"
                          letterId="foo@example.com"
                          loaded={true}
                          round={true}
                          style={
                            Object {
                              "height": "28px",
                              "width": "28px",
                            }
                          }
                          title="Foo Bar"
                          type="letter_avatar"
                          uploadId=""
                          uploadPath="avatar"
                        >
                          <span
                            className="avatar e1mtf41h1 css-11cenzn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                            title="Foo Bar"
                            type="letter_avatar"
                          >
                            <ForwardRef
                              displayName="Foo Bar"
                              identifier="foo@example.com"
                              round={true}
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                forwardedRef={null}
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  forwardedRef={null}
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </ForwardRef>
                          </span>
                        </StyledBaseAvatar>
                      </span>
                    </Container>
                  </InnerReference>
                </Reference>
              </Manager>
            </Tooltip>
          </BaseAvatar>
        </UserAvatar>
      </StyledAvatar>
      <StyledAvatar
        gravatar={false}
        hasTooltip={true}
        key="3-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "3",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <UserAvatar
          className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
          gravatar={false}
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "3",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <BaseAvatar
            className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
            gravatarId="foo@example.com"
            hasTooltip={true}
            letterId="foo@example.com"
            round={true}
            size={28}
            style={Object {}}
            title="Foo Bar"
            tooltip="Foo Bar (foo@example.com)"
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            type="letter_avatar"
            uploadId=""
            uploadPath="avatar"
          >
            <Tooltip
              containerDisplayMode="inline-block"
              disabled={false}
              position="top"
              title="Foo Bar (foo@example.com)"
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <Container
                      aria-describedby="tooltip-123456"
                      containerDisplayMode="inline-block"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        aria-describedby="tooltip-123456"
                        className="css-1y4rfpo-Container eowlwvy0"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <StyledBaseAvatar
                          className="avatar css-31pfpo-StyledAvatar-Circle e1mtf41h1"
                          gravatarId="foo@example.com"
                          letterId="foo@example.com"
                          loaded={true}
                          round={true}
                          style={
                            Object {
                              "height": "28px",
                              "width": "28px",
                            }
                          }
                          title="Foo Bar"
                          type="letter_avatar"
                          uploadId=""
                          uploadPath="avatar"
                        >
                          <span
                            className="avatar e1mtf41h1 css-11cenzn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                            title="Foo Bar"
                            type="letter_avatar"
                          >
                            <ForwardRef
                              displayName="Foo Bar"
                              identifier="foo@example.com"
                              round={true}
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                forwardedRef={null}
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  forwardedRef={null}
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </ForwardRef>
                          </span>
                        </StyledBaseAvatar>
                      </span>
                    </Container>
                  </InnerReference>
                </Reference>
              </Manager>
            </Tooltip>
          </BaseAvatar>
        </UserAvatar>
      </StyledAvatar>
      <StyledAvatar
        gravatar={false}
        hasTooltip={true}
        key="4-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "4",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <UserAvatar
          className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
          gravatar={false}
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "4",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <BaseAvatar
            className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
            gravatarId="foo@example.com"
            hasTooltip={true}
            letterId="foo@example.com"
            round={true}
            size={28}
            style={Object {}}
            title="Foo Bar"
            tooltip="Foo Bar (foo@example.com)"
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            type="letter_avatar"
            uploadId=""
            uploadPath="avatar"
          >
            <Tooltip
              containerDisplayMode="inline-block"
              disabled={false}
              position="top"
              title="Foo Bar (foo@example.com)"
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <Container
                      aria-describedby="tooltip-123456"
                      containerDisplayMode="inline-block"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        aria-describedby="tooltip-123456"
                        className="css-1y4rfpo-Container eowlwvy0"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <StyledBaseAvatar
                          className="avatar css-31pfpo-StyledAvatar-Circle e1mtf41h1"
                          gravatarId="foo@example.com"
                          letterId="foo@example.com"
                          loaded={true}
                          round={true}
                          style={
                            Object {
                              "height": "28px",
                              "width": "28px",
                            }
                          }
                          title="Foo Bar"
                          type="letter_avatar"
                          uploadId=""
                          uploadPath="avatar"
                        >
                          <span
                            className="avatar e1mtf41h1 css-11cenzn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                            title="Foo Bar"
                            type="letter_avatar"
                          >
                            <ForwardRef
                              displayName="Foo Bar"
                              identifier="foo@example.com"
                              round={true}
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                forwardedRef={null}
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  forwardedRef={null}
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </ForwardRef>
                          </span>
                        </StyledBaseAvatar>
                      </span>
                    </Container>
                  </InnerReference>
                </Reference>
              </Manager>
            </Tooltip>
          </BaseAvatar>
        </UserAvatar>
      </StyledAvatar>
      <StyledAvatar
        gravatar={false}
        hasTooltip={true}
        key="5-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "5",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <UserAvatar
          className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
          gravatar={false}
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "5",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <BaseAvatar
            className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
            gravatarId="foo@example.com"
            hasTooltip={true}
            letterId="foo@example.com"
            round={true}
            size={28}
            style={Object {}}
            title="Foo Bar"
            tooltip="Foo Bar (foo@example.com)"
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            type="letter_avatar"
            uploadId=""
            uploadPath="avatar"
          >
            <Tooltip
              containerDisplayMode="inline-block"
              disabled={false}
              position="top"
              title="Foo Bar (foo@example.com)"
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <Container
                      aria-describedby="tooltip-123456"
                      containerDisplayMode="inline-block"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        aria-describedby="tooltip-123456"
                        className="css-1y4rfpo-Container eowlwvy0"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <StyledBaseAvatar
                          className="avatar css-31pfpo-StyledAvatar-Circle e1mtf41h1"
                          gravatarId="foo@example.com"
                          letterId="foo@example.com"
                          loaded={true}
                          round={true}
                          style={
                            Object {
                              "height": "28px",
                              "width": "28px",
                            }
                          }
                          title="Foo Bar"
                          type="letter_avatar"
                          uploadId=""
                          uploadPath="avatar"
                        >
                          <span
                            className="avatar e1mtf41h1 css-11cenzn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                            title="Foo Bar"
                            type="letter_avatar"
                          >
                            <ForwardRef
                              displayName="Foo Bar"
                              identifier="foo@example.com"
                              round={true}
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                forwardedRef={null}
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  forwardedRef={null}
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </ForwardRef>
                          </span>
                        </StyledBaseAvatar>
                      </span>
                    </Container>
                  </InnerReference>
                </Reference>
              </Manager>
            </Tooltip>
          </BaseAvatar>
        </UserAvatar>
      </StyledAvatar>
    </div>
  </AvatarListWrapper>
</AvatarList>
`;

exports[`AvatarList renders with user avatars 1`] = `
<AvatarList
  avatarSize={28}
  maxVisibleAvatars={5}
  tooltipOptions={
    Object {
      "position": "top",
    }
  }
  typeMembers="users"
  users={
    Array [
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "1",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "flags": Object {
          "newsletter_consent_prompt": false,
        },
        "hasPasswordAuth": true,
        "id": "2",
        "isAuthenticated": true,
        "name": "Foo Bar",
        "options": Object {
          "timezone": "UTC",
        },
        "username": "foo@example.com",
      },
    ]
  }
>
  <AvatarListWrapper>
    <div
      className="css-1kbnx78-AvatarListWrapper e1mtf41h0"
    >
      <StyledAvatar
        gravatar={false}
        hasTooltip={true}
        key="1-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "1",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <UserAvatar
          className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
          gravatar={false}
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "1",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <BaseAvatar
            className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
            gravatarId="foo@example.com"
            hasTooltip={true}
            letterId="foo@example.com"
            round={true}
            size={28}
            style={Object {}}
            title="Foo Bar"
            tooltip="Foo Bar (foo@example.com)"
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            type="letter_avatar"
            uploadId=""
            uploadPath="avatar"
          >
            <Tooltip
              containerDisplayMode="inline-block"
              disabled={false}
              position="top"
              title="Foo Bar (foo@example.com)"
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <Container
                      aria-describedby="tooltip-123456"
                      containerDisplayMode="inline-block"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        aria-describedby="tooltip-123456"
                        className="css-1y4rfpo-Container eowlwvy0"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <StyledBaseAvatar
                          className="avatar css-31pfpo-StyledAvatar-Circle e1mtf41h1"
                          gravatarId="foo@example.com"
                          letterId="foo@example.com"
                          loaded={true}
                          round={true}
                          style={
                            Object {
                              "height": "28px",
                              "width": "28px",
                            }
                          }
                          title="Foo Bar"
                          type="letter_avatar"
                          uploadId=""
                          uploadPath="avatar"
                        >
                          <span
                            className="avatar e1mtf41h1 css-11cenzn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                            title="Foo Bar"
                            type="letter_avatar"
                          >
                            <ForwardRef
                              displayName="Foo Bar"
                              identifier="foo@example.com"
                              round={true}
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                forwardedRef={null}
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  forwardedRef={null}
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </ForwardRef>
                          </span>
                        </StyledBaseAvatar>
                      </span>
                    </Container>
                  </InnerReference>
                </Reference>
              </Manager>
            </Tooltip>
          </BaseAvatar>
        </UserAvatar>
      </StyledAvatar>
      <StyledAvatar
        gravatar={false}
        hasTooltip={true}
        key="2-foo@example.com"
        size={28}
        tooltipOptions={
          Object {
            "position": "top",
          }
        }
        user={
          Object {
            "email": "foo@example.com",
            "flags": Object {
              "newsletter_consent_prompt": false,
            },
            "hasPasswordAuth": true,
            "id": "2",
            "isAuthenticated": true,
            "name": "Foo Bar",
            "options": Object {
              "timezone": "UTC",
            },
            "username": "foo@example.com",
          }
        }
      >
        <UserAvatar
          className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
          gravatar={false}
          hasTooltip={true}
          size={28}
          tooltipOptions={
            Object {
              "position": "top",
            }
          }
          user={
            Object {
              "email": "foo@example.com",
              "flags": Object {
                "newsletter_consent_prompt": false,
              },
              "hasPasswordAuth": true,
              "id": "2",
              "isAuthenticated": true,
              "name": "Foo Bar",
              "options": Object {
                "timezone": "UTC",
              },
              "username": "foo@example.com",
            }
          }
        >
          <BaseAvatar
            className="css-31pfpo-StyledAvatar-Circle e1mtf41h1"
            gravatarId="foo@example.com"
            hasTooltip={true}
            letterId="foo@example.com"
            round={true}
            size={28}
            style={Object {}}
            title="Foo Bar"
            tooltip="Foo Bar (foo@example.com)"
            tooltipOptions={
              Object {
                "position": "top",
              }
            }
            type="letter_avatar"
            uploadId=""
            uploadPath="avatar"
          >
            <Tooltip
              containerDisplayMode="inline-block"
              disabled={false}
              position="top"
              title="Foo Bar (foo@example.com)"
            >
              <Manager>
                <Reference>
                  <InnerReference
                    setReferenceNode={[Function]}
                  >
                    <Container
                      aria-describedby="tooltip-123456"
                      containerDisplayMode="inline-block"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        aria-describedby="tooltip-123456"
                        className="css-1y4rfpo-Container eowlwvy0"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <StyledBaseAvatar
                          className="avatar css-31pfpo-StyledAvatar-Circle e1mtf41h1"
                          gravatarId="foo@example.com"
                          letterId="foo@example.com"
                          loaded={true}
                          round={true}
                          style={
                            Object {
                              "height": "28px",
                              "width": "28px",
                            }
                          }
                          title="Foo Bar"
                          type="letter_avatar"
                          uploadId=""
                          uploadPath="avatar"
                        >
                          <span
                            className="avatar e1mtf41h1 css-11cenzn-StyledBaseAvatar-StyledAvatar-Circle e147uwb0"
                            style={
                              Object {
                                "height": "28px",
                                "width": "28px",
                              }
                            }
                            title="Foo Bar"
                            type="letter_avatar"
                          >
                            <ForwardRef
                              displayName="Foo Bar"
                              identifier="foo@example.com"
                              round={true}
                            >
                              <LetterAvatar
                                displayName="Foo Bar"
                                forwardedRef={null}
                                identifier="foo@example.com"
                                round={true}
                              >
                                <Component
                                  className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                  displayName="Foo Bar"
                                  forwardedRef={null}
                                  identifier="foo@example.com"
                                  round={true}
                                >
                                  <svg
                                    className="css-1oxr9oh-LetterAvatar e12lgfev0"
                                    viewBox="0 0 120 120"
                                  >
                                    <rect
                                      fill="#315cac"
                                      height="120"
                                      rx="15"
                                      ry="15"
                                      width="120"
                                      x="0"
                                      y="0"
                                    />
                                    <text
                                      fill="#FFFFFF"
                                      fontSize="65"
                                      style={
                                        Object {
                                          "dominantBaseline": "central",
                                        }
                                      }
                                      textAnchor="middle"
                                      x="50%"
                                      y="50%"
                                    >
                                      FB
                                    </text>
                                  </svg>
                                </Component>
                              </LetterAvatar>
                            </ForwardRef>
                          </span>
                        </StyledBaseAvatar>
                      </span>
                    </Container>
                  </InnerReference>
                </Reference>
              </Manager>
            </Tooltip>
          </BaseAvatar>
        </UserAvatar>
      </StyledAvatar>
    </div>
  </AvatarListWrapper>
</AvatarList>
`;
